<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <com.kks.teza14.custom_control.MyanTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:text="@string/spouse_name"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_small" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_normal"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <com.kks.teza14.custom_control.MyanEditText
                        android:id="@+id/et_spouse"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorWhite"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_size_small" />

                </androidx.cardview.widget.CardView>

                <com.kks.teza14.custom_control.MyanTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:text="@string/kids_name"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_small" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_normal"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <com.kks.teza14.custom_control.MyanEditText
                        android:id="@+id/et_kids"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:minHeight="40dp"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_size_small" />

                </androidx.cardview.widget.CardView>

                <com.kks.teza14.custom_control.MyanTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:text="@string/address"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_small" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_normal"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <com.kks.teza14.custom_control.MyanEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:minHeight="40dp"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_size_small" />

                </androidx.cardview.widget.CardView>

                <com.kks.teza14.custom_control.MyanTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:text="@string/job"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_small" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_normal"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <com.kks.teza14.custom_control.MyanEditText
                        android:id="@+id/et_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:minHeight="40dp"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_size_small" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:gravity="center_vertical">

                    <com.kks.teza14.custom_control.MyanTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/text_size_small" />

                    <ImageView
                        android:id="@+id/iv_add_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small" />

                <com.kks.teza14.custom_control.MyanTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:text="@string/note"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_small" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:cardCornerRadius="@dimen/card_corner_radius">

                    <com.kks.teza14.custom_control.MyanEditText
                        android:id="@+id/et_note"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="@dimen/margin_small"
                        android:textSize="@dimen/text_size_small"
                        android:background="@color/colorWhite" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </ScrollView>

        <com.kks.teza14.custom_control.MyanTextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGreen"
            android:gravity="center"
            android:text="Save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_large" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>